--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </a>
             </div>
             <div class="project">
-                <a href="Data Technology Roles.pbip" target="_blank" aria-label="Analyzing Data Technology Roles Project">
+                <a href="Data Technology Roles.pptx" target="_blank" aria-label="Analyzing Data Technology Roles Project">
                     <h3>Project 3</h3>
                     <p>Analyzing Data Technology Roles.</p>
                 </a>
