--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Mohamed, a dedicated and detail-oriented Data Scientist with a passion for Machine Learning, Artificial Intelligence, and Data Visualization. 
-               I have extensive experience in data analysis, predictive modeling, and transforming raw data into meaningful insights, using Python, Pandas, Scikit-Learn, TensorFlow, and various other tools used in the Data Science ecosystem.</p>
-            <p>Throughout my career, I have worked on multiple projects involving data cleaning, feature engineering, and developing machine learning models. 
-            <p>My goal is to leverage data-driven solutions to solve complex real-world problems, optimize business performance, and drive decision-making.</p>
+            <p>I am Mohamed Hussein, a highly motivated, detail-oriented Data Scientist with a strong passion for Machine Learning, Artificial Intelligence, and Data Visualization.
+                With a solid foundation in statistical analysis and programming, I bring extensive experience in data analysis, predictive modelling, and the transformation of complex datasets into clear, actionable insights.
+                My technical proficiency spans a wide range of industry-standard tools and libraries,
+                including Python, Pandas, Scikit-learn, TensorFlow, and other components of the modern data science ecosystem.</p>
+            <p>Throughout my career, I have successfully delivered a variety of data science projects that involved data cleaning, feature engineering, and the development, tuning, and evaluation of machine learning models. These projects have enabled me to refine my ability to identify patterns, make accurate predictions, and contribute to business decision-making processes through data-driven strategies.<p> 
+            <p>My professional objective is to leverage data as a strategic asset to solve real-world challenges, optimise operational performance, and support informed decision-making in a wide array of industries. I am particularly committed to staying current with advancements in the field of data science, continuously enhancing my skill set to remain at the forefront of emerging technologies and methodologies.<p>
+            <p>I am equally comfortable working independently or in cross-functional teams and have consistently demonstrated the ability to communicate technical findings to stakeholders at all levels of an organisation. My work ethic, combined with my analytical mindset and commitment to quality, allows me to make meaningful contributions to any data-focused initiative.</p>
         </section>
     
 
