--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="https://www.udemy.com/certificate/UC-8f4bb7b7-8ef0-4528-91b5-043b4da52f91/" target="_blank" aria-label="View Data Science Bootcamp Certification">View Certificate</a>
                 </div>
                 <div class="certification">
-                    <img src="cert-python-ml.png" alt="Complete Data Science Bootcamp 2025">
+                    <img src="job.png" alt="British Airways Job Simulation 2025">
                     <p>British Airways Job Simulation</p>
                     <a href="job simulation.pdf" target="_blank" aria-label="View job Simulation">View Certificate</a>
                 </div>
