--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     
 
         <section id="resume">
-            <h2>Resume1</h2>
-            <p>View my resume: <a href="My Resume.pdf" target="_blank" aria-label="View my resume">View Resume</a></p>
+            <h2>My Resume</h2>
+            <p>View my resume: <a href="Resume1.pdf" target="_blank" aria-label="View my resume">View Resume</a></p>
         </section>
 
         <section id="portfolio">
