--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </div>
             <div class="project">
                 <a href="Accident Analysis.html" target="_blank" aria-label="Accident Analysis Project">
+                    <img src="cert-ibm-data-science.jpg" alt="IBM Data Science Professional Certificate">
                     <h3>Project 2</h3>
                     <p>Accident Analysis.</p>
                 </a>
