--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="project">
                 <a href="Accident Analysis.html" target="_blank" aria-label="Accident Analysis Project">
-                    <img src="cert-ibm-data-science.jpg" alt="Screenshot 2025-04-27 222701.png">
+                    <img src="Screenshot 2025-04-27 222701.png" alt="Screenshot 2025-04-27 222701.png">
                     <h3>Project 2</h3>
                     <p>Accident Analysis.</p>
                 </a>
