--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="project">
                 <a href="Accident Analysis.html" target="_blank" aria-label="Accident Analysis Project">
-                    <img src="Image" alt="Car Accident Analysis">
+                    <img src="ChatGPT Image Apr 27, 2025, 10_40_57 PM.png" alt="Car Accident Analysis">
                     <h3>Project 2</h3>
                     <p>Accident Analysis.</p>
                 </a>
