--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>My Projects</h2>
             <div class="project">
                 <a href="Diamond Price Data Set.html" target="_blank" aria-label="Diamond Price Analysis Project">
-                    <img src="ChatGPT Image Apr 27, 2025, 10_40_57 PM.png" alt="Car Accident Analysis">
+                    <img src="Screenshot 2025-04-27 231521.png" alt="Diamond Type Analysis">
                     <h3>Project 1</h3>
                     <p>Diamond Price Analysis.</p>
                 </a>
