--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="project-container">
                 
                 <div class="project">
-                    <img src="project1.jpg" alt="Diamond Type Analysis">
+                    <img src="Project1.png" alt="Diamond Type Analysis">
                     <div class="project-content">
                         <h3>Data Analysis Project</h3>
                         <p>Exploratory data analysis on Diamond Types using Python and Built a predictive model with 98% accuracy.</p>
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="project">
-                    <img src="project2.jpg" alt="Accident Data Analysis">
+                    <img src="ChatGPT Image Apr 27, 2025, 10_40_57 PM.png" alt="Accident Data Analysis">
                     <div class="project-content">
                         <h3>Machine Learning Model</h3>
                         <p>Built a predictive model to forecast Accident occurance with 85% accuracy With EDA.</p>
