--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 
                 <div class="project">
                     <img src="Project1.png" alt="Diamond Type Analysis">
-                    <div class="project-content">
-                        <h3>Data Analysis Project</h3>
+                    <div class="Diamond Price Data Set.html">
+                        <h3>Exploratory Data Analysis</h3>
                         <p>Exploratory data analysis on Diamond Types using Python and Built a predictive model with 98% accuracy.</p>
                         <a href="#">View Project</a>
                     </div>
@@ -53,7 +53,7 @@
 
                 <div class="project">
                     <img src="ChatGPT Image Apr 27, 2025, 10_40_57 PM.png" alt="Accident Data Analysis">
-                    <div class="project-content">
+                    <div class="Accident Analysis">
                         <h3>Machine Learning Model</h3>
                         <p>Built a predictive model to forecast Accident occurance with 85% accuracy With EDA.</p>
                         <a href="#">View Project</a>
@@ -62,7 +62,7 @@
 
                 <div class="project">
                     <img src="project3.jpg" alt="Project 3">
-                    <div class="project-content">
+                    <div class="Data Technology Roles.pptx">
                         <h3>Portfolio Website</h3>
                         <p>Exploratory data analysis on Data Job Roles data using Power BI dashboards.</p>
                         <a href="#">View Project</a>
