--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="Diamond Price Data Set.html">
                         <h3>Exploratory Data Analysis</h3>
                         <p>Exploratory data analysis on Diamond Types using Python and Built a predictive model with 98% accuracy.</p>
-                        <a href="#">View Project</a>
+                        <a href="Diamond Price Data Set.html" target="_blank">View Project</a>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                     <div class="Accident Analysis">
                         <h3>Machine Learning Model</h3>
                         <p>Built a predictive model to forecast Accident occurance with 85% accuracy With EDA.</p>
-                        <a href="#">View Project</a>
+                        <a href="Accident Analysis.html" target="_blank">View Project</a>
                     </div>
                 </div>
 
@@ -65,7 +65,7 @@
                     <div class="Data Technology Roles.pptx">
                         <h3>Portfolio Website</h3>
                         <p>Exploratory data analysis on Data Job Roles data using Power BI dashboards.</p>
-                        <a href="#">View Project</a>
+                        <a href="Data Technology Roles.pptx" target="_blank">View Project</a>
                     </div>
                 </div>
 
