--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 </div>
 
                 <div class="project">
-                    <img src="project3.jpg" alt="Project 3">
+                    <img src="Screenshot 2025-04-28 001544.png" alt="Project 3">
                     <div class="project-content">
-                        <h3>Portfolio Website</h3>
+                        <h3>Data Technology Roles</h3>
                         <p>Exploratory data analysis on Data Job Roles data using Power BI dashboards.</p>
                         <a href="Data Technology Roles.pptx" target="_blank">View Project</a>
                     </div>
