--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!-- Portfolio Section -->
         <section id="portfolio">
-            <h2>My Portfolio</h2>
+            <h2>Projects</h2>
             <div class="project-container">
                 
                 <div class="project">
