--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="certification">
                     <img src="job.png" alt="British Airways Job Simulation 2025">
                     <div class="certification-content">
-                        <h3>British Airways Simulation</h3>
+                        <h3>British Airways Job Simulation</h3>
                         <a href="job simulation.pdf" target="_blank">View Certificate</a>
                     </div>
                 </div>
