--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>I am Mohamed Hussein, a highly motivated, detail-oriented Data Scientist with a strong passion for Machine Learning, Artificial Intelligence, and Data Visualization.</p>
-            <p>With a solid foundation in statistical analysis and programming, I bring extensive experience in data analysis, predictive modelling, and the transformation of complex datasets into clear, actionable insights.</p>
-            <p>My professional objective is to leverage data as a strategic asset to solve real-world challenges, optimise operational performance, and support informed decision-making in a wide array of industries.</p>
-            <p>I am equally comfortable working independently or in cross-functional teams and have consistently demonstrated the ability to communicate technical findings to stakeholders at all levels.</p>
+            <p>I am Mohamed Hussein, a highly motivated, detail-oriented Data Scientist with a strong passion for Machine Learning, Artificial Intelligence, and Data Visualization.
+               With a solid foundation in statistical analysis and programming, I bring extensive experience in data analysis, predictive modelling, and the transformation of complex datasets into clear, actionable insights.</p>
+            <p>My professional objective is to leverage data as a strategic asset to solve real-world challenges, optimise operational performance, and support informed decision-making in a wide array of industries.
+               I am equally comfortable working independently or in cross-functional teams and have consistently demonstrated the ability to communicate technical findings to stakeholders at all levels.</p>
+            <p>I am continually seeking opportunities to expand my knowledge, staying updated with the latest advancements in data science methodologies and technologies.
+               By combining technical expertise with creative problem-solving skills, I aim to deliver data-driven solutions that drive business growth and innovation.</p>
+            <p>My approach is rooted in curiosity, collaboration, and a commitment to delivering results that exceed expectations.
+               I believe in the transformative power of data and am passionate about using it to uncover hidden patterns, predict future trends, and generate meaningful impact.</p>
         </section>
 
         <section id="resume">
