--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>Email: mohahar2013@gmail.com</p>
+            <a href="https://wa.me/252634801052" target="_blank" style="text-decoration:none;">
+            <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp"/>
+            </a>
+            <p>Email: <a href="mailto:mohahar2013@gmail.com">Email me</a>
             <p>GitHub: <a href="https://github.com/mohammedhussein22" target="_blank">github.com/mohammedhussein22</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/mohamed-hussein-63b190213/" target="_blank">linkedin.com/in/mohamed-hussein-63b190213/</a></p>
         </section>
