--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <a href="https://wa.me/252634801052" target="_blank" style="text-decoration:none;">
-            <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp"/>
-            </a>
+            <p>Whatsapp: <a href="https://wa.me/252634801052?text=Hello%20Mohamed%2C%20I%20found%20you%20on%20your%20website!" target="_blank">
             <p>Email: <a href="mailto:mohahar2013@gmail.com">Email me</a>
             <p>GitHub: <a href="https://github.com/mohammedhussein22" target="_blank">github.com/mohammedhussein22</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/mohamed-hussein-63b190213/" target="_blank">linkedin.com/in/mohamed-hussein-63b190213/</a></p>
