--- a/index.html
+++ b/index.html
@@ -118,10 +118,23 @@
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>Whatsapp: <a href="https://wa.me/252634801052?text=Hello%20Mohamed%2C%20I%20found%20you%20on%20your%20website!" target="_blank">
-            <p>Email: <a href="mailto:mohahar2013@gmail.com">Email me</a>
-            <p>GitHub: <a href="https://github.com/mohammedhussein22" target="_blank">github.com/mohammedhussein22</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/mohamed-hussein-63b190213/" target="_blank">linkedin.com/in/mohamed-hussein-63b190213/</a></p>
+            <p>
+    <a href="https://wa.me/252634801052?text=Hello%20Mohamed%2C%20I%20found%20you%20on%20your%20website!" target="_blank">
+        <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp" />
+    </a>
+
+    <a href="mailto:mohahar2013@gmail.com" target="_blank">
+        <img src="https://img.icons8.com/color/48/000000/gmail-new.png" alt="Gmail" />
+    </a>
+
+    <a href="https://github.com/mohammedhussein22" target="_blank">
+        <img src="https://img.icons8.com/ios-glyphs/48/000000/github.png" alt="GitHub" />
+    </a>
+
+    <a href="https://www.linkedin.com/in/mohamed-hussein-63b190213/" target="_blank">
+        <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="LinkedIn" />
+    </a>
+</p>
         </section>
 
     </main>
