--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="https://img.icons8.com/ios/100/4CAF50/line-chart.png" alt="Data Chart" width="80" height="80">
+    <img src="ChatGPT Image Apr 28, 2025, 08_40_41 AM.png" alt="Data Chart" width="80" height="80">
     <title>My Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
