--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio Website</title>
+    <title>Outlier's Club💥</title>
 
     <link rel="icon" href="ChatGPT Image Apr 28, 2025, 08_40_41 AM.png" type="image/png">
     <link rel="stylesheet" href="style.css">
