--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                     </div>
                 </div>
 
+                  <div class="project">
+                    <img src="Screenshot 2025-04-28 001544.png" alt="Project 3">
+                    <div class="project-content">
+                        <h3>Fraud Detection</h3>
+                        <p>Machine Learning model predicting that is used for Fraud Detection.</p>
+                        <a href="Fraud detection ml.html" target="_blank">View Project</a>
+                    </div>
+                </div>
             </div>
         </section>
 
