--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="project">
                     <img src="Project1.png" alt="Diamond Type Analysis">
                     <div class="project-content">
-                        <h3>Exploratory Data Analysis</h3>
+                        <h3>Diamond Price Prediction</h3>
                         <p>Exploratory data analysis on Diamond Types using Python and Built a predictive model with 98% accuracy.</p>
                         <a href="Diamond Price Data Set.html" target="_blank">View Project</a>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="project">
                     <img src="ChatGPT Image Apr 27, 2025, 10_40_57 PM.png" alt="Accident Data Analysis">
                     <div class="project-content">
-                        <h3>Machine Learning Model</h3>
+                        <h3>Car Accident Analysis</h3>
                         <p>Built a predictive model to forecast Accident occurance with 85% accuracy With EDA.</p>
                         <a href="Accident Analysis.html" target="_blank">View Project</a>
                     </div>
