--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="project-content">
                         <h3>Data Technology Roles</h3>
                         <p>Exploratory data analysis on Data Job Roles data using Power BI dashboards.</p>
-                        <a href="Data Technology Roles.pptx" target="_blank">View Project</a>
+                        <a href="Data Technology Roles.html" target="_blank">View Project</a>
                     </div>
                 </div>
 
