--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="Screenshot 2025-04-28 001544.png" alt="Project 3">
                     <div class="project-content">
                         <h3>Data Technology Roles</h3>
-                        <p>Exploratory data analysis on Data Job Roles data using Power BI dashboards.</p>
+                        <p>Exploratory data analysis on Data Job Roles data.</p>
                         <a href="Data Technology Roles.html" target="_blank">View Project</a>
                     </div>
                 </div>
