--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
 
                   <div class="project">
-                    <img src="detection (2).png" alt="Project 3">
+                    <img src="Detection (2).png" alt="Project 3">
                     <div class="project-content">
                         <h3>Fraud Detection</h3>
                         <p>Machine Learning model predicting that is used for Fraud Detection.</p>
