--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <img src="ChatGPT Image Apr 27, 2025, 10_40_57 PM.png" alt="Accident Data Analysis">
                     <div class="project-content">
                         <h3>Car Accident Analysis</h3>
-                        <p>Built a predictive model to forecast Accident occurance with 85% accuracy With EDA.</p>
-                        <a href="Accident Analysis.html" target="_blank">View Project</a>
+                        <p>Built a Machine Learning Model to Cluster Accident Data.</p>
+                        <a href="Car Accidents.html" target="_blank">View Project</a>
                     </div>
                 </div>
 
