--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
                         <a href="Employee Attrition.html" target="_blank">View Project</a>
                     </div>
                 </div>   
-                
+
+                <div class="project">
+                    <img src="Screenshot 2025-05-23 112458.png" alt="Diamond Type Analysis">
+                    <div class="project-content">
+                        <h3>Employee Attrition</h3>
+                        <p>Exploratory data analysis on employee attrition with classification machine learning model.</p>
+                        <a href="Employee Attrition.html" target="_blank">View Project</a>
+                    </div>
+                </div>
                 
                 <div class="project">
                     <img src="Project1.png" alt="Diamond Type Analysis">
