--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 </div>   
 
                 <div class="project">
-                    <img src="Screenshot 2025-05-23 112458.png" alt="Diamond Type Analysis">
+                    <img src="Screenshot 2025-05-25 224007.png" alt="Diamond Type Analysis">
                     <div class="project-content">
-                        <h3>Employee Attrition</h3>
-                        <p>Exploratory data analysis on employee attrition with classification machine learning model.</p>
-                        <a href="Employee Attrition.html" target="_blank">View Project</a>
+                        <h3>Sales Forecasting</h3>
+                        <p> built a system to help retailers predict demand and optimize prices using machine learning and time series analysis.</p>
+                        <a href="Sales Forecasting.html" target="_blank">View Project</a>
                     </div>
                 </div>
                 
