--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
                     </div>
                 </div>
 
+                <div class="certification">
+                    <img src="job2.png" alt="British Airways Job Simulation 2025">
+                    <div class="certification-content">
+                        <h3>Commonwealth Bank Job Simulation</h3>
+                        <a href="Common Wealth Bank.pdf" target="_blank">View Certificate</a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
