--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                 </div>
 
                 <div class="certification">
-                    <img src="job2.png" alt="British Airways Job Simulation 2025">
+                    <img src="Job2.png" alt="British Airways Job Simulation 2025">
                     <div class="certification-content">
                         <h3>Commonwealth Bank Job Simulation</h3>
-                        <a href="Common Wealth Bank.pdf" target="_blank">View Certificate</a>
+                        <a href="Common wealth Bank.pdf" target="_blank">View Certificate</a>
                     </div>
                 </div>
 
