--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
 
                 <div class="certification">
-                    <img src="Job2.png" alt="British Airways Job Simulation 2025">
+                    <img src="Job2.png" alt="Commonwealth Bank Job Simulation">
                     <div class="certification-content">
                         <h3>Commonwealth Bank Job Simulation</h3>
                         <a href="Common wealth Bank.pdf" target="_blank">View Certificate</a>
