--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <div class="project">
                     <img src="Screenshot 2025-05-25 224007.png" alt="Diamond Type Analysis">
                     <div class="project-content">
-                        <h3>Sales Forecasting</h3>
-                        <p> built a system to help retailers predict demand and optimize prices using machine learning and time series analysis.</p>
-                        <a href="Sales Forecasting.html" target="_blank">View Project</a>
+                        <h3>Airmiles Capstone</h3>
+                        <p> Made a Timeseries forecasting model to predict time trends for airmiles with seasonality.</p>
+                        <a href="CAPSTONE_Airmiles.ipynb" target="_blank">View Project</a>
                     </div>
                 </div>
                 
