--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="project-content">
                         <h3>Airmiles Capstone</h3>
                         <p> Made a Timeseries forecasting model to predict time trends for airmiles with seasonality.</p>
-                        <a href="CAPSTONE_Airmiles.ipynb" target="_blank">View Project</a>
+                        <a href="CAPSTONE_Airmiles.html" target="_blank">View Project</a>
                     </div>
                 </div>
                 
