--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
                 </div>
 
                 <div class="project">
+                    <img src="Project1.png" alt="Diamond Type Analysis">
+                    <div class="project-content">
+                        <h3>Diamond Price Prediction</h3>
+                        <p>Exploratory data analysis on Diamond Types using Python and Built a predictive model with 98% accuracy.</p>
+                        <a href="Diamond Price Data Set.html" target="_blank">View Project</a>
+                    </div>
+                </div>
+
+                <div class="project">
                     <img src="ChatGPT Image Apr 27, 2025, 10_40_57 PM.png" alt="Accident Data Analysis">
                     <div class="project-content">
                         <h3>Car Accident Analysis</h3>
