--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <div class="project">
                     <img src="Project1.png" alt="Diamond Type Analysis">
                     <div class="project-content">
-                        <h3>Diamond Price Prediction</h3>
-                        <p>Exploratory data analysis on Diamond Types using Python and Built a predictive model with 98% accuracy.</p>
-                        <a href="Diamond Price Data Set.html" target="_blank">View Project</a>
+                        <h3>Sales Forecasting</h3>
+                        <p>Developed a sales forecasting model using raw sample data by performing thorough exploratory data analysis and applying machine learning techniques to predict future sales trends.</p>
+                        <a href="Sales Data Sample.html" target="_blank">View Project</a>
                     </div>
                 </div>
 
