--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 
                 <div class="project">
-                    <img src="Project1.png" alt="Diamond Type Analysis">
+                    <img src="sales.png" alt="Diamond Type Analysis">
                     <div class="project-content">
                         <h3>Sales Forecasting</h3>
                         <p>Developed a sales forecasting model using raw sample data by performing thorough exploratory data analysis and applying machine learning techniques to predict future sales trends.</p>
