--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="sales.png" alt="Diamond Type Analysis">
                     <div class="project-content">
                         <h3>Sales Forecasting</h3>
-                        <p>Developed a sales forecasting model using raw sample data by performing thorough exploratory data analysis and applying machine learning techniques to predict future sales trends.</p>
+                        <p>Designed and implemented a sales forecasting model, applying EDA and ML to raw data for accurate sales trend prediction.</p>
                         <a href="Sales Data Sample.html" target="_blank">View Project</a>
                     </div>
                 </div>
