--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
                         <a href="CAPSTONE_Airmiles.html" target="_blank">View Project</a>
                     </div>
                 </div>
+
+                <div class="project">
+                    <img src="Screenshot 2025-06-14 145710.png" alt="Diamond Type Analysis">
+                    <div class="project-content">
+                        <h3>AI impact on human services</h3>
+                        <p>Analyzing the Influence of AI on the Human Services Sector: An Exploratory Data Study.</p>
+                        <a href="AI impact on Human services.html" target="_blank">View Project</a>
+                    </div>
+                </div>
                 
                 <div class="project">
                     <img src="sales.png" alt="Diamond Type Analysis">
