--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <section id="resume">
             <h2>My Resume</h2>
-            <p>View my resume: <a href="Resume.pdf" target="_blank" aria-label="View my resume">View Resume</a></p>
+            <p>View my resume: <a href="CV.pdf" target="_blank" aria-label="View my resume">View Resume</a></p>
         </section>
 
         <!-- Portfolio Section -->
